mp/mp8/student.output
   0  $accept : %entry% $end

   1  main : expression SEMI
   2       | dec SEMI

   3  dec : atomic_dec
   4      | dec atomic_dec

   5  atomic_dec : VAL simp_bind
   6             | VAL REC IDENT rec_var_param_bind
   7             | FUN IDENT rec_var_param_bind
   8             | LOCAL dec IN dec END

   9  rec_var_param_bind : IDENT EQUALS expression
  10                     | IDENT rec_var_param_bind

  11  simp_bind : IDENT EQUALS expression
  12            | UNDERSCORE EQUALS expression

  13  expression : or_else_exp
  14             | app_exp

  15  expression_seq : expression
  16                 | expression SEMI expression_seq

  17  or_else_exp : or_else_no_ifr_exp ORELSE and_also_exp
  18              | and_also_exp

  19  or_else_no_ifr_exp : or_else_no_ifr_exp ORELSE and_also_no_ifr_exp
  20                     | and_also_no_ifr_exp

  21  and_also_exp : and_also_no_ifr_exp ANDALSO comp_exp
  22               | comp_exp

  23  and_also_no_ifr_exp : and_also_no_ifr_exp ANDALSO comp_no_ifr_exp
  24                      | comp_no_ifr_exp

  25  comp_exp : comp_no_ifr_exp comp_op cons_exp
  26           | cons_exp

  27  comp_no_ifr_exp : comp_no_ifr_exp comp_op cons_no_ifr_exp
  28                  | cons_no_ifr_exp

  29  cons_exp : add_sub_no_ifr_exp DCOLON cons_exp
  30           | add_sub_exp

  31  cons_no_ifr_exp : cons_no_ifr_exp DCOLON add_sub_no_ifr_exp
  32                  | add_sub_no_ifr_exp

  33  add_sub_exp : add_sub_no_ifr_exp add_sub_op mult_div_exp
  34              | mult_div_exp

  35  add_sub_no_ifr_exp : add_sub_no_ifr_exp add_sub_op mult_div_no_ifr_exp
  36                     | mult_div_no_ifr_exp

  37  mult_div_exp : mult_div_no_ifr_exp div_mult_op non_op_exp
  38               | non_op_exp

  39  mult_div_no_ifr_exp : mult_div_no_ifr_exp div_mult_op app_no_ifr_exp
  40                      | app_no_ifr_exp

  41  non_op_exp : if_fn_raise_exp
  42             | app_exp

  43  app_exp : atomic_mon_exp
  44          | mon_op app_exp
  45          | app_no_ifr_mo_exp non_app_exp

  46  app_no_ifr_mo_exp : atomic_exp
  47                    | app_no_ifr_mo_exp atomic_mon_exp

  48  app_no_ifr_exp : atomic_mon_exp
  49                 | mon_op app_no_ifr_exp
  50                 | app_no_ifr_mo_exp atomic_mon_exp

  51  non_app_exp : atomic_mon_exp
  52              | if_fn_raise_exp

  53  if_fn_raise_exp : IF expression THEN expression ELSE or_else_exp
  54                  | FN IDENT ARROW or_else_exp
  55                  | RAISE or_else_exp

  56  app_exp_mon_exp : atomic_exp
  57                  | mon_op_exp

  58  atomic_mon_exp : atomic_exp
  59                 | mon_op_exp

  60  atomic_exp : const_exp
  61             | OP bin_op
  62             | IDENT
  63             | paren_exp
  64             | list_exp
  65             | LET dec IN expression_seq END

  66  const_exp : INT
  67            | BOOL
  68            | REAL
  69            | STRING
  70            | LBRAC RBRAC
  71            | NIL
  72            | UNIT
  73            | LPAREN RPAREN

  74  bin_op : comp_op
  75         | add_sub_op
  76         | div_mult_op
  77         | DCOLON
  78         | COMMA

  79  bin_op_exp : bin_op

  80  add_sub_op : PLUS
  81             | DPLUS
  82             | MINUS
  83             | DMINUS
  84             | CARAT

  85  div_mult_op : DIV
  86              | DDIV
  87              | TIMES
  88              | DTIMES

  89  mon_op_exp : NEG
  90             | HD
  91             | TL
  92             | FST
  93             | SND

  94  mon_op : NEG
  95         | HD
  96         | TL
  97         | FST
  98         | SND

  99  comp_op : GT
 100          | EQUALS
 101          | desug_comp_op

 102  desug_comp_op : LT
 103                | LEQ
 104                | GEQ
 105                | NEQ

 106  list_exp : LBRAC list_inner_exp RBRAC

 107  list_inner_exp : expression
 108                 | expression COMMA list_inner_exp

 109  paren_exp : LPAREN expression RPAREN
 110            | LPAREN expression SEMI expression_seq RPAREN
 111            | LPAREN expression COMMA pair_exp RPAREN

 112  pair_exp : expression
 113           | expression COMMA pair_exp RPAREN

 114  pat : INT
 115      | UNDERSCORE

 116  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (116)

	INT  shift 3
	REAL  shift 4
	BOOL  shift 5
	STRING  shift 6
	IDENT  shift 7
	NEG  shift 8
	NIL  shift 9
	LET  shift 10
	LOCAL  shift 11
	VAL  shift 12
	IF  shift 13
	FUN  shift 14
	FN  shift 15
	OP  shift 16
	RAISE  shift 17
	HD  shift 18
	TL  shift 19
	FST  shift 20
	SND  shift 21
	LBRAC  shift 22
	LPAREN  shift 23
	UNIT  shift 24
	.  error

	main  goto 25
	expression  goto 26
	dec  goto 27
	atomic_dec  goto 28
	or_else_exp  goto 29
	app_exp  goto 30
	or_else_no_ifr_exp  goto 31
	and_also_exp  goto 32
	and_also_no_ifr_exp  goto 33
	comp_exp  goto 34
	comp_no_ifr_exp  goto 35
	cons_exp  goto 36
	cons_no_ifr_exp  goto 37
	add_sub_no_ifr_exp  goto 38
	add_sub_exp  goto 39
	mult_div_exp  goto 40
	mult_div_no_ifr_exp  goto 41
	non_op_exp  goto 42
	app_no_ifr_exp  goto 43
	if_fn_raise_exp  goto 44
	atomic_mon_exp  goto 45
	mon_op  goto 46
	app_no_ifr_mo_exp  goto 47
	atomic_exp  goto 48
	mon_op_exp  goto 49
	const_exp  goto 50
	paren_exp  goto 51
	list_exp  goto 52


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	const_exp : INT .  (66)

	.  reduce 66


state 4
	const_exp : REAL .  (68)

	.  reduce 68


state 5
	const_exp : BOOL .  (67)

	.  reduce 67


state 6
	const_exp : STRING .  (69)

	.  reduce 69


state 7
	atomic_exp : IDENT .  (62)

	.  reduce 62


state 8
	mon_op_exp : NEG .  (89)
	mon_op : NEG .  (94)

	INT  reduce 94
	REAL  reduce 94
	BOOL  reduce 94
	STRING  reduce 94
	IDENT  reduce 94
	NEG  reduce 94
	PLUS  reduce 89
	MINUS  reduce 89
	TIMES  reduce 89
	DIV  reduce 89
	DPLUS  reduce 89
	DMINUS  reduce 89
	DTIMES  reduce 89
	DDIV  reduce 89
	CARAT  reduce 89
	LT  reduce 89
	GT  reduce 89
	LEQ  reduce 89
	GEQ  reduce 89
	EQUALS  reduce 89
	NEQ  reduce 89
	SEMI  reduce 89
	DCOLON  reduce 89
	NIL  reduce 94
	LET  reduce 94
	LOCAL  reduce 89
	VAL  reduce 89
	END  reduce 89
	IN  reduce 89
	THEN  reduce 89
	ELSE  reduce 89
	FUN  reduce 89
	OP  reduce 94
	ANDALSO  reduce 89
	ORELSE  reduce 89
	HD  reduce 94
	TL  reduce 94
	FST  reduce 94
	SND  reduce 94
	LBRAC  reduce 94
	RBRAC  reduce 89
	LPAREN  reduce 94
	RPAREN  reduce 89
	COMMA  reduce 89
	UNIT  reduce 94


state 9
	const_exp : NIL .  (71)

	.  reduce 71


state 10
	atomic_exp : LET . dec IN expression_seq END  (65)

	LOCAL  shift 11
	VAL  shift 12
	FUN  shift 14
	.  error

	dec  goto 53
	atomic_dec  goto 28


state 11
	atomic_dec : LOCAL . dec IN dec END  (8)

	LOCAL  shift 11
	VAL  shift 12
	FUN  shift 14
	.  error

	dec  goto 54
	atomic_dec  goto 28


state 12
	atomic_dec : VAL . simp_bind  (5)
	atomic_dec : VAL . REC IDENT rec_var_param_bind  (6)

	IDENT  shift 55
	REC  shift 56
	UNDERSCORE  shift 57
	.  error

	simp_bind  goto 58


state 13
	if_fn_raise_exp : IF . expression THEN expression ELSE or_else_exp  (53)

	INT  shift 3
	REAL  shift 4
	BOOL  shift 5
	STRING  shift 6
	IDENT  shift 7
	NEG  shift 8
	NIL  shift 9
	LET  shift 10
	IF  shift 13
	FN  shift 15
	OP  shift 16
	RAISE  shift 17
	HD  shift 18
	TL  shift 19
	FST  shift 20
	SND  shift 21
	LBRAC  shift 22
	LPAREN  shift 23
	UNIT  shift 24
	.  error

	expression  goto 59
	or_else_exp  goto 29
	app_exp  goto 30
	or_else_no_ifr_exp  goto 31
	and_also_exp  goto 32
	and_also_no_ifr_exp  goto 33
	comp_exp  goto 34
	comp_no_ifr_exp  goto 35
	cons_exp  goto 36
	cons_no_ifr_exp  goto 37
	add_sub_no_ifr_exp  goto 38
	add_sub_exp  goto 39
	mult_div_exp  goto 40
	mult_div_no_ifr_exp  goto 41
	non_op_exp  goto 42
	app_no_ifr_exp  goto 43
	if_fn_raise_exp  goto 44
	atomic_mon_exp  goto 45
	mon_op  goto 46
	app_no_ifr_mo_exp  goto 47
	atomic_exp  goto 48
	mon_op_exp  goto 49
	const_exp  goto 50
	paren_exp  goto 51
	list_exp  goto 52


state 14
	atomic_dec : FUN . IDENT rec_var_param_bind  (7)

	IDENT  shift 60
	.  error


state 15
	if_fn_raise_exp : FN . IDENT ARROW or_else_exp  (54)

	IDENT  shift 61
	.  error


state 16
	atomic_exp : OP . bin_op  (61)

	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	DPLUS  shift 66
	DMINUS  shift 67
	DTIMES  shift 68
	DDIV  shift 69
	CARAT  shift 70
	LT  shift 71
	GT  shift 72
	LEQ  shift 73
	GEQ  shift 74
	EQUALS  shift 75
	NEQ  shift 76
	DCOLON  shift 77
	COMMA  shift 78
	.  error

	comp_op  goto 79
	add_sub_op  goto 80
	div_mult_op  goto 81
	bin_op  goto 82
	desug_comp_op  goto 83


state 17
	if_fn_raise_exp : RAISE . or_else_exp  (55)

	INT  shift 3
	REAL  shift 4
	BOOL  shift 5
	STRING  shift 6
	IDENT  shift 7
	NEG  shift 8
	NIL  shift 9
	LET  shift 10
	IF  shift 13
	FN  shift 15
	OP  shift 16
	RAISE  shift 17
	HD  shift 18
	TL  shift 19
	FST  shift 20
	SND  shift 21
	LBRAC  shift 22
	LPAREN  shift 23
	UNIT  shift 24
	.  error

	or_else_exp  goto 84
	app_exp  goto 85
	or_else_no_ifr_exp  goto 31
	and_also_exp  goto 32
	and_also_no_ifr_exp  goto 33
	comp_exp  goto 34
	comp_no_ifr_exp  goto 35
	cons_exp  goto 36
	cons_no_ifr_exp  goto 37
	add_sub_no_ifr_exp  goto 38
	add_sub_exp  goto 39
	mult_div_exp  goto 40
	mult_div_no_ifr_exp  goto 41
	non_op_exp  goto 42
	app_no_ifr_exp  goto 43
	if_fn_raise_exp  goto 44
	atomic_mon_exp  goto 45
	mon_op  goto 46
	app_no_ifr_mo_exp  goto 47
	atomic_exp  goto 48
	mon_op_exp  goto 49
	const_exp  goto 50
	paren_exp  goto 51
	list_exp  goto 52


state 18
	mon_op_exp : HD .  (90)
	mon_op : HD .  (95)

	INT  reduce 95
	REAL  reduce 95
	BOOL  reduce 95
	STRING  reduce 95
	IDENT  reduce 95
	NEG  reduce 95
	PLUS  reduce 90
	MINUS  reduce 90
	TIMES  reduce 90
	DIV  reduce 90
	DPLUS  reduce 90
	DMINUS  reduce 90
	DTIMES  reduce 90
	DDIV  reduce 90
	CARAT  reduce 90
	LT  reduce 90
	GT  reduce 90
	LEQ  reduce 90
	GEQ  reduce 90
	EQUALS  reduce 90
	NEQ  reduce 90
	SEMI  reduce 90
	DCOLON  reduce 90
	NIL  reduce 95
	LET  reduce 95
	LOCAL  reduce 90
	VAL  reduce 90
	END  reduce 90
	IN  reduce 90
	THEN  reduce 90
	ELSE  reduce 90
	FUN  reduce 90
	OP  reduce 95
	ANDALSO  reduce 90
	ORELSE  reduce 90
	HD  reduce 95
	TL  reduce 95
	FST  reduce 95
	SND  reduce 95
	LBRAC  reduce 95
	RBRAC  reduce 90
	LPAREN  reduce 95
	RPAREN  reduce 90
	COMMA  reduce 90
	UNIT  reduce 95


state 19
	mon_op_exp : TL .  (91)
	mon_op : TL .  (96)

	INT  reduce 96
	REAL  reduce 96
	BOOL  reduce 96
	STRING  reduce 96
	IDENT  reduce 96
	NEG  reduce 96
	PLUS  reduce 91
	MINUS  reduce 91
	TIMES  reduce 91
	DIV  reduce 91
	DPLUS  reduce 91
	DMINUS  reduce 91
	DTIMES  reduce 91
	DDIV  reduce 91
	CARAT  reduce 91
	LT  reduce 91
	GT  reduce 91
	LEQ  reduce 91
	GEQ  reduce 91
	EQUALS  reduce 91
	NEQ  reduce 91
	SEMI  reduce 91
	DCOLON  reduce 91
	NIL  reduce 96
	LET  reduce 96
	LOCAL  reduce 91
	VAL  reduce 91
	END  reduce 91
	IN  reduce 91
	THEN  reduce 91
	ELSE  reduce 91
	FUN  reduce 91
	OP  reduce 96
	ANDALSO  reduce 91
	ORELSE  reduce 91
	HD  reduce 96
	TL  reduce 96
	FST  reduce 96
	SND  reduce 96
	LBRAC  reduce 96
	RBRAC  reduce 91
	LPAREN  reduce 96
	RPAREN  reduce 91
	COMMA  reduce 91
	UNIT  reduce 96


state 20
	mon_op_exp : FST .  (92)
	mon_op : FST .  (97)

	INT  reduce 97
	REAL  reduce 97
	BOOL  reduce 97
	STRING  reduce 97
	IDENT  reduce 97
	NEG  reduce 97
	PLUS  reduce 92
	MINUS  reduce 92
	TIMES  reduce 92
	DIV  reduce 92
	DPLUS  reduce 92
	DMINUS  reduce 92
	DTIMES  reduce 92
	DDIV  reduce 92
	CARAT  reduce 92
	LT  reduce 92
	GT  reduce 92
	LEQ  reduce 92
	GEQ  reduce 92
	EQUALS  reduce 92
	NEQ  reduce 92
	SEMI  reduce 92
	DCOLON  reduce 92
	NIL  reduce 97
	LET  reduce 97
	LOCAL  reduce 92
	VAL  reduce 92
	END  reduce 92
	IN  reduce 92
	THEN  reduce 92
	ELSE  reduce 92
	FUN  reduce 92
	OP  reduce 97
	ANDALSO  reduce 92
	ORELSE  reduce 92
	HD  reduce 97
	TL  reduce 97
	FST  reduce 97
	SND  reduce 97
	LBRAC  reduce 97
	RBRAC  reduce 92
	LPAREN  reduce 97
	RPAREN  reduce 92
	COMMA  reduce 92
	UNIT  reduce 97


state 21
	mon_op_exp : SND .  (93)
	mon_op : SND .  (98)

	INT  reduce 98
	REAL  reduce 98
	BOOL  reduce 98
	STRING  reduce 98
	IDENT  reduce 98
	NEG  reduce 98
	PLUS  reduce 93
	MINUS  reduce 93
	TIMES  reduce 93
	DIV  reduce 93
	DPLUS  reduce 93
	DMINUS  reduce 93
	DTIMES  reduce 93
	DDIV  reduce 93
	CARAT  reduce 93
	LT  reduce 93
	GT  reduce 93
	LEQ  reduce 93
	GEQ  reduce 93
	EQUALS  reduce 93
	NEQ  reduce 93
	SEMI  reduce 93
	DCOLON  reduce 93
	NIL  reduce 98
	LET  reduce 98
	LOCAL  reduce 93
	VAL  reduce 93
	END  reduce 93
	IN  reduce 93
	THEN  reduce 93
	ELSE  reduce 93
	FUN  reduce 93
	OP  reduce 98
	ANDALSO  reduce 93
	ORELSE  reduce 93
	HD  reduce 98
	TL  reduce 98
	FST  reduce 98
	SND  reduce 98
	LBRAC  reduce 98
	RBRAC  reduce 93
	LPAREN  reduce 98
	RPAREN  reduce 93
	COMMA  reduce 93
	UNIT  reduce 98


state 22
	const_exp : LBRAC . RBRAC  (70)
	list_exp : LBRAC . list_inner_exp RBRAC  (106)

	INT  shift 3
	REAL  shift 4
	BOOL  shift 5
	STRING  shift 6
	IDENT  shift 7
	NEG  shift 8
	NIL  shift 9
	LET  shift 10
	IF  shift 13
	FN  shift 15
	OP  shift 16
	RAISE  shift 17
	HD  shift 18
	TL  shift 19
	FST  shift 20
	SND  shift 21
	LBRAC  shift 22
	RBRAC  shift 86
	LPAREN  shift 23
	UNIT  shift 24
	.  error

	expression  goto 87
	or_else_exp  goto 29
	app_exp  goto 30
	or_else_no_ifr_exp  goto 31
	and_also_exp  goto 32
	and_also_no_ifr_exp  goto 33
	comp_exp  goto 34
	comp_no_ifr_exp  goto 35
	cons_exp  goto 36
	cons_no_ifr_exp  goto 37
	add_sub_no_ifr_exp  goto 38
	add_sub_exp  goto 39
	mult_div_exp  goto 40
	mult_div_no_ifr_exp  goto 41
	non_op_exp  goto 42
	app_no_ifr_exp  goto 43
	if_fn_raise_exp  goto 44
	atomic_mon_exp  goto 45
	mon_op  goto 46
	app_no_ifr_mo_exp  goto 47
	atomic_exp  goto 48
	mon_op_exp  goto 49
	const_exp  goto 50
	paren_exp  goto 51
	list_exp  goto 52
	list_inner_exp  goto 88


state 23
	const_exp : LPAREN . RPAREN  (73)
	paren_exp : LPAREN . expression RPAREN  (109)
	paren_exp : LPAREN . expression SEMI expression_seq RPAREN  (110)
	paren_exp : LPAREN . expression COMMA pair_exp RPAREN  (111)

	INT  shift 3
	REAL  shift 4
	BOOL  shift 5
	STRING  shift 6
	IDENT  shift 7
	NEG  shift 8
	NIL  shift 9
	LET  shift 10
	IF  shift 13
	FN  shift 15
	OP  shift 16
	RAISE  shift 17
	HD  shift 18
	TL  shift 19
	FST  shift 20
	SND  shift 21
	LBRAC  shift 22
	LPAREN  shift 23
	RPAREN  shift 89
	UNIT  shift 24
	.  error

	expression  goto 90
	or_else_exp  goto 29
	app_exp  goto 30
	or_else_no_ifr_exp  goto 31
	and_also_exp  goto 32
	and_also_no_ifr_exp  goto 33
	comp_exp  goto 34
	comp_no_ifr_exp  goto 35
	cons_exp  goto 36
	cons_no_ifr_exp  goto 37
	add_sub_no_ifr_exp  goto 38
	add_sub_exp  goto 39
	mult_div_exp  goto 40
	mult_div_no_ifr_exp  goto 41
	non_op_exp  goto 42
	app_no_ifr_exp  goto 43
	if_fn_raise_exp  goto 44
	atomic_mon_exp  goto 45
	mon_op  goto 46
	app_no_ifr_mo_exp  goto 47
	atomic_exp  goto 48
	mon_op_exp  goto 49
	const_exp  goto 50
	paren_exp  goto 51
	list_exp  goto 52


state 24
	const_exp : UNIT .  (72)

	.  reduce 72


state 25
	%entry% : '\001' main .  (116)

	.  reduce 116


state 26
	main : expression . SEMI  (1)

	SEMI  shift 91
	.  error


state 27
	main : dec . SEMI  (2)
	dec : dec . atomic_dec  (4)

	SEMI  shift 92
	LOCAL  shift 11
	VAL  shift 12
	FUN  shift 14
	.  error

	atomic_dec  goto 93


state 28
	dec : atomic_dec .  (3)

	.  reduce 3


state 29
	expression : or_else_exp .  (13)

	.  reduce 13


30: reduce/reduce conflict (reduce 14, reduce 42) on SEMI
30: reduce/reduce conflict (reduce 14, reduce 42) on LOCAL
30: reduce/reduce conflict (reduce 14, reduce 42) on VAL
30: reduce/reduce conflict (reduce 14, reduce 42) on END
30: reduce/reduce conflict (reduce 14, reduce 42) on IN
30: reduce/reduce conflict (reduce 14, reduce 42) on THEN
30: reduce/reduce conflict (reduce 14, reduce 42) on ELSE
30: reduce/reduce conflict (reduce 14, reduce 42) on FUN
30: reduce/reduce conflict (reduce 14, reduce 42) on RBRAC
30: reduce/reduce conflict (reduce 14, reduce 42) on RPAREN
30: reduce/reduce conflict (reduce 14, reduce 42) on COMMA
state 30
	expression : app_exp .  (14)
	non_op_exp : app_exp .  (42)

	.  reduce 14


state 31
	or_else_exp : or_else_no_ifr_exp . ORELSE and_also_exp  (17)
	or_else_no_ifr_exp : or_else_no_ifr_exp . ORELSE and_also_no_ifr_exp  (19)

	ORELSE  shift 94
	.  error


state 32
	or_else_exp : and_also_exp .  (18)

	.  reduce 18


state 33
	or_else_no_ifr_exp : and_also_no_ifr_exp .  (20)
	and_also_exp : and_also_no_ifr_exp . ANDALSO comp_exp  (21)
	and_also_no_ifr_exp : and_also_no_ifr_exp . ANDALSO comp_no_ifr_exp  (23)

	ANDALSO  shift 95
	ORELSE  reduce 20


state 34
	and_also_exp : comp_exp .  (22)

	.  reduce 22


state 35
	and_also_no_ifr_exp : comp_no_ifr_exp .  (24)
	comp_exp : comp_no_ifr_exp . comp_op cons_exp  (25)
	comp_no_ifr_exp : comp_no_ifr_exp . comp_op cons_no_ifr_exp  (27)

	LT  shift 71
	GT  shift 72
	LEQ  shift 73
	GEQ  shift 74
	EQUALS  shift 75
	NEQ  shift 76
	ANDALSO  reduce 24
	ORELSE  reduce 24

	comp_op  goto 96
	desug_comp_op  goto 83


state 36
	comp_exp : cons_exp .  (26)

	.  reduce 26


state 37
	comp_no_ifr_exp : cons_no_ifr_exp .  (28)
	cons_no_ifr_exp : cons_no_ifr_exp . DCOLON add_sub_no_ifr_exp  (31)

	DCOLON  shift 97
	LT  reduce 28
	GT  reduce 28
	LEQ  reduce 28
	GEQ  reduce 28
	EQUALS  reduce 28
	NEQ  reduce 28
	ANDALSO  reduce 28
	ORELSE  reduce 28


38: shift/reduce conflict (shift 98, reduce 32) on DCOLON
state 38
	cons_exp : add_sub_no_ifr_exp . DCOLON cons_exp  (29)
	cons_no_ifr_exp : add_sub_no_ifr_exp .  (32)
	add_sub_exp : add_sub_no_ifr_exp . add_sub_op mult_div_exp  (33)
	add_sub_no_ifr_exp : add_sub_no_ifr_exp . add_sub_op mult_div_no_ifr_exp  (35)
